# simple_optional

./: CMakeLists.txt
include/simple/: optional.hpp
test/: CMakeLists.txt  so_test.cpp
